fix: fixed graying out buttons in dark mode (#5921)

--- a/web/assets/css/transmission-app.scss
+++ b/web/assets/css/transmission-app.scss
@@ -94,7 +94,7 @@ $image-play-circle-idle: '../img/play-circle-idle.svg';
     --color-fg-primary: #{$dark-mode-white};
     --color-fg-secondary: #{$nice-grey};
     --color-fg-on-popup: #{$nice-grey};
-    --color-fg-disabled: #{$dark-mode-white};
+    --color-fg-disabled: #808088;
     --color-bg-warn: #cf6679;
     --color-fg-warn: #{$dark-mode-black};
     --color-border: #{$dark-mode-white};
